# django-rest-auth

./: README.md  manage.py  pyproject.toml
django_rest/: admin.py  api_views.py  apps.py  models.py  pagination.py  serializers.py  urls.py  views.py
django_rest/migrations/: 0001_initial.py
django_rest_auth_exam/: asgi.py  settings.py  urls.py  wsgi.py
