[tool.poetry]
name = "django-rest-auth-exam"
version = "0.1.0"
description = "Rest Registeration"
authors = ["Ahmad Abdulrahman <ah.abdulrahmaan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
djangorestframework = "^3.14.0"
django-rest-knox = "^4.2.0"
black = "^22.10.0"
django-environ = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
